prod: link to duckduckgo.com instead of google.com

--- a/area.html
+++ b/area.html
@@ -58,7 +58,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=square+area" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=square+area" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -82,7 +82,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=parallelogram+area" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=parallelogram+area" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -107,7 +107,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=triangle+area" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=triangle+area" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -127,7 +127,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=equilateral+triangle+area" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=equilateral+triangle+area" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -147,7 +147,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=circle+area" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=circle+area" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -177,7 +177,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=trapezoid+area" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=trapezoid+area" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
