--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -61,7 +61,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=diagonal+of+a+square" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=diagonal+of+a+square" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -89,7 +89,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=diagonal+of+a+parallelogram" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=diagonal+of+a+parallelogram" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -109,7 +109,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=number+of+diagonals+in+a+convex+polygon" target="_blank"
+            <a href="https://duckduckgo.com/?q=number+of+diagonals+in+a+convex+polygon" target="_blank"
                 rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -139,7 +139,7 @@
             </div>
             <br>
             <div class="my-4">
-                <a href="https://www.google.com/search?q=trapezoid+diagonal+using+angle" target="_blank" rel="noopener"
+                <a href="https://duckduckgo.com/?q=trapezoid+diagonal+using+angle" target="_blank" rel="noopener"
                     class="btn btn-outline-light">Find information on the web</a>
             </div>
             <hr class="bg-danger" style="width: 45%;" />
@@ -167,7 +167,7 @@
             </div>
             <br>
             <div class="my-4">
-                <a href="https://www.google.com/search?q=trapezoid+diagonal+using+height" target="_blank" rel="noopener"
+                <a href="https://duckduckgo.com/?q=trapezoid+diagonal+using+height" target="_blank" rel="noopener"
                     class="btn btn-outline-light">Find information on the web</a>
             </div>
     </div>
