--- a/displacement.html
+++ b/displacement.html
@@ -65,7 +65,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+displacement" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+displacement" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -89,7 +89,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+Δt" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+Δt" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -113,7 +113,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+speed+from+Δt+and+Δx" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+speed+from+Δt+and+Δx" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
