--- a/imperfcarboncombust.html
+++ b/imperfcarboncombust.html
@@ -76,7 +76,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+incomplete+carbon+combustion" target="_blank"
+            <a href="https://duckduckgo.com/?q=calculate+incomplete+carbon+combustion" target="_blank"
                 rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
