--- a/inequalities.html
+++ b/inequalities.html
@@ -64,7 +64,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+inequalities" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+first+degree+inequalities" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax+c>0 END -->
@@ -90,7 +90,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+inequalities" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+first+degree+inequalities" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax+c>=0 END -->
@@ -116,7 +116,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+inequalities" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+first+degree+inequalities" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax+c<0 END  -->
@@ -142,7 +142,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+inequalities" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+first+degree+inequalities" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax+c<=0 END -->
