--- a/linear-systems.html
+++ b/linear-systems.html
@@ -89,7 +89,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=Solve+Linear+2x2+systems" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr style="width: 60%;">
@@ -121,7 +121,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=Solve+Linear+2x2+systems+when+x=y" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=Solve+Linear+2x2+systems+when+x=y" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         </form>
