--- a/logar.html
+++ b/logar.html
@@ -65,7 +65,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=logarithm" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=logarithm" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr style="width: 50%">
@@ -86,7 +86,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=natural+logarithm" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=natural+logarithm" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
