--- a/perimeter.html
+++ b/perimeter.html
@@ -59,7 +59,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=square+perimeter" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=square+perimeter" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -83,7 +83,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=parallelogram+perimeter" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=parallelogram+perimeter" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -112,7 +112,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=triangle+perimeter" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=triangle+perimeter" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -132,7 +132,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=equilateral+triangle+perimeter" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=equilateral+triangle+perimeter" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -152,7 +152,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=circle+perimeter" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=circle+perimeter" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
