--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -66,7 +66,7 @@
         </div>
         <br />
         <div class="my-4">
-            <a href="https://www.google.com/search?q=find+hypotenuse" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=find+hypotenuse" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
