--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -93,7 +93,7 @@
             <p class="text-warning" id="output">100% for AA</p>
         </div>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=find+punnett+square" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=find+punnett+square" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
