--- a/quadraticequations.html
+++ b/quadraticequations.html
@@ -63,7 +63,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+second+degree+equation" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- ax^2=c END -->
@@ -89,7 +89,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+second+degree+equation" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- X - Y = Z END -->
@@ -120,7 +120,7 @@
         <br>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+second+degree+equation" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+second+degree+equation" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- YX = Z END  -->
