--- a/roots.html
+++ b/roots.html
@@ -60,7 +60,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+square+root" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+square+root" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -81,7 +81,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+cube+root" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+cube+root" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -107,7 +107,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+nth+root" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+nth+root" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
