--- a/round.html
+++ b/round.html
@@ -67,7 +67,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=round+numbers" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=round+numbers" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
