--- a/trigcalculator.html
+++ b/trigcalculator.html
@@ -62,7 +62,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+sin" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+sin" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
             <a href="https://www.mathflare.xyz/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
                 Trigonometric Numbers</a>
@@ -84,7 +84,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+cos" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+cos" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
             <a href="https://www.mathflare.xyz/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
                 Trigonometric Numbers</a>
@@ -106,7 +106,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+tan" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+tan" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
             <a href="https://www.mathflare.xyz/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
                 Trigonometric Numbers</a>
@@ -128,7 +128,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+arcsin" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+arcsin" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <hr style="width: 50%;">
@@ -148,7 +148,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+arccos" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+arccos" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <hr style="width: 50%;">
@@ -168,7 +168,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+arctan" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+arctan" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <hr style="width: 50%;">
@@ -188,7 +188,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+hyperbolic+sine" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+hyperbolic+sine" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <hr style="width: 50%;">
@@ -208,7 +208,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+hyperbolic+cosine" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+hyperbolic+cosine" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
         <hr style="width: 50%;">
@@ -228,7 +228,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+hyperbolic+tangent" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+hyperbolic+tangent" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
         </div>
     </div>
