--- a/avg.html
+++ b/avg.html
@@ -58,7 +58,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+average" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+average" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
