--- a/carboncombustions.html
+++ b/carboncombustions.html
@@ -67,7 +67,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+complete+carbon+combustion" target="_blank"
+            <a href="https://duckduckgo.com/?q=calculate+complete+carbon+combustion" target="_blank"
                 rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
