--- a/concentration.html
+++ b/concentration.html
@@ -72,7 +72,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+solution+concentration" target="_blank"
+            <a href="https://duckduckgo.com/?q=calculate+solution+concentration" target="_blank"
                 rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
