--- a/equations.html
+++ b/equations.html
@@ -63,7 +63,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+first+degree+equations" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- X + Y = Z END -->
@@ -89,7 +89,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+first+degree+equations" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- X - Y = Z END -->
@@ -115,7 +115,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=solve+first+degree+equations" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=solve+first+degree+equations" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <!-- YX = Z END  -->
