--- a/handshake.html
+++ b/handshake.html
@@ -61,7 +61,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+number+of+handshakes+at+party" target="_blank"
+            <a href="https://duckduckgo.com/?q=calculate+number+of+handshakes+at+party" target="_blank"
                 rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
