--- a/percent.html
+++ b/percent.html
@@ -63,7 +63,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=fraction+to+percentage" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=fraction+to+percentage" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -87,7 +87,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+percentage" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+percentage" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -111,7 +111,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+percentage+difference" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+percentage+difference" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -142,7 +142,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+value+after+discount" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+value+after+discount" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr class="bg-danger" style="width: 50%;" />
@@ -173,7 +173,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+value+before+discount" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+value+before+discount" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
