--- a/pointsdistance.html
+++ b/pointsdistance.html
@@ -71,7 +71,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+distance+between+two+points" target="_blank"
+            <a href="https://duckduckgo.com/?q=calculate+distance+between+two+points" target="_blank"
                 rel="noopener" class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
