--- a/pow.html
+++ b/pow.html
@@ -63,7 +63,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+square+root" target="_blank" rel="noopener"
+            <a href="https://duckduckgo.com/?q=calculate+square+root" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
