prod: minor changes

--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,27 @@
     <title>MathFlare - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare - Contact">
+    <meta name="og:title" content="MathFlare - Contact" />
+    <meta name="twitter:title" content="MathFlare - Contact" />
+    <meta name="keywords"
+        content="contact, email, mail, form, get in touch, feature request, report bug, mathflare, math flare">
+    <meta name="description" content="Complete algebra, geometry and trigonometry cheat sheet." />
+    <meta name="og:description" content="Complete algebra, geometry and trigonometry cheat sheet." />
+    <meta name="twitter:description" content="Complete algebra, geometry and trigonometry cheat sheet." />
     <meta name="author" content="MathFlare.xyz" />
+    <meta name="og:url" content="https://www.mathflare.xyz/contact" />
     <link rel="canonical" href="https://www.mathflare.xyz/contact">
+    <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
+    <meta name="og:locale" content="en_US" />
+    <meta name="og:type" content="website" />
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
     <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="Assets/android-chrome-192x192.png" sizes=192x192>
     <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
@@ -61,6 +74,21 @@
         <p id="user-message"></p>
         <p><i class="bi bi-lightning"></i> Didn't work? why don't you send us an <a href="mailto:contact@mathflare.xyz"
                 target="_blank" rel="noopener">email</a>?</p>
+    </div>
+    <div class="container center-form">
+        <p>Other projects/services we use and support:</p>
+        <ul>
+            <li><a href="https://duckduckgo.com/" target="_blank" rel="noopener">Duck Duck Go</a> - Private search
+                engine(google alternative)</li>
+            <li><a href="https://www.mozilla.org/en-US/firefox/new/" target="_blank" rel="noopener">Mozilla Firefox</a>
+                - Private, secure and fast browser(chrome/edge
+                alternative)</li>
+            <li><a href="https://privacybadger.org/" target="_blank" rel="noopener">Privacy Badger</a> - Browser
+                extension for safer browsing</li>
+            <li><a href="https://www.eff.org/https-everywhere" target="_blank" rel="noopener">HTTPS Everywhere</a> -
+                Browser extension for safer browsing</li>
+            <li><a href="https://adguard.com/en/welcome.html" target="_blank" rel="noopener">Ad Guard</a> - Internet ad
+                blocker</li>
     </div>
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
