--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
     <link rel="home" href="https://www.mathflare.xyz">
     <meta name="theme-color" content="#FFC107">
     <!-- STYLES -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="manifest" href="manifest.json">
     <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
@@ -41,14 +39,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
     <!-- SCRIPTS -->
+    <script src="dist/navbar.js" defer></script>
+    <script src="dist/common.js" defer></script>
+    <script src="dist/main.js" defer></script>
     <script data-ad-client="ca-pub-1524024547471266" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script type="text/javascript">
-        window._mNHandle = window._mNHandle || {};
-        window._mNHandle.queue = window._mNHandle.queue || [];
-        medianet_versionId = "3121199";
-    </script>
-    <script src="https://contextual.media.net/dmedianet.js?cid=8CU2PFO93" async="async"></script>
 </head>
 
 <body>
@@ -122,25 +117,10 @@
                         class="donate-link">PayPal</a></p>
             </div>
         </div>
-        <div id="511680788">
-            <script type="text/javascript">
-                try {
-                    window._mNHandle.queue.push(function () {
-                        window._mNDetails.loadTag("511680788", "970x90", "511680788");
-                    });
-                }
-                catch (error) {
-                    console.error(`Ad error: ${error.message}`);
-                }
-            </script>
-        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
-    <script src="dist/navbar.js"></script>
-    <script src="dist/common.js"></script>
-    <script src="dist/main.js"></script>
     <script>
         if (typeof (Storage) !== 'undefined') {
             let storage = window.localStorage, pageCount;
