prod: moved scripts to head

--- a/carboncombustions.html
+++ b/carboncombustions.html
@@ -23,16 +23,18 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:image" content="https://www.mathflare.xyz/Assets/logo.png">
     <link rel="home" href="https://www.mathflare.xyz">
-    <!-- STYLES -->
+    <!-- STYLES / ICONS -->
     <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
-    
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="Assets/android-chrome-192x192.png" sizes=192x192>
     <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
-    <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
+    <!-- SCRIPTS -->
+    <script src="dist/navbar.js" defer></script>
+    <script src="dist/common.js" defer></script>
+    <script src="dist/main.js" defer></script>
 </head>
 
 <body>
@@ -74,9 +76,6 @@
     <!-- SCRIPTS START -->
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
-    <script src="dist/navbar.js"></script>
-    <script src="dist/common.js"></script>
-    <script src="dist/main.js"></script>
     <script src="dist/carboncombustions.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
