--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="canonical" href="https://www.mathflare.xyz">
     <link rel="home" href="https://www.mathflare.xyz">
     <meta name="theme-color" content="#FFC107">
-    <!-- STYLES -->
+    <!-- STYLES / ICONS -->
     <link rel="manifest" href="manifest.json">
     <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
