prod: manu button in the landing page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             <p class="lead fs-4 fw-normal text-danger" style="font-family: 'Nunito', Poppins, sans-serif;">the go-to
                 website for algebra and geometry</p>
         </div>
+        <div class="center mb-5 mt-0">
+            <button class="btn btn-lg btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#menuSidebar"
+                aria-controls="menuSidebar"><i class="bi bi-list"></i> Menu</button>
+        </div>
         <div class="row align-items-center justify-content-between mb-5">
             <div class="col-md d-none d-md-block">
                 <img src="Assets/calculator.svg" alt="calculator" width="80%" class="img-fluid">
