prod: testing MathJax and added polyfill

--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -35,6 +35,7 @@
     <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
