--- a/linear-systems.html
+++ b/linear-systems.html
@@ -33,9 +33,11 @@
     <link rel="icon" type="image/png" href="Assets/android-chrome-512x512.png" sizes=512x512>
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/apple-touch-icon.png">
     <!-- SCRIPTS -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script src="dist/navbar.js" defer></script>
     <script src="dist/common.js" defer></script>
     <script src="dist/main.js" defer></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
 <body>
@@ -43,39 +45,39 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Linear 2x2 Systems; <var>ax + by = c</var></h1>
+        <h1 class="text-white">Linear 2x2 Systems; \(ax + by = c\)</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h3 class="text-white">First Equation:</h3>
             <hr class="bg-danger" style="width: 50%;" />
-            <h4 class="text-white">Enter the value of <var>a</var></h4>
+            <h4 class="text-white">Enter the value of \(a\)</h4>
             <div class="center-form">
                 <input type="number" id="a1" placeholder="a" name="a1" class="form-control mb-0" step="0.1" />
             </div>
             <br />
-            <h4 class="text-white">Enter the value of <var>b</var></h4>
+            <h4 class="text-white">Enter the value of \(b\)</h4>
             <div class="center-form">
                 <input type="number" id="b1" placeholder="b" name="b1" class="form-control mb-0" step="0.1" />
             </div>
             <br>
-            <h4 class="text-white">Enter the value of <var>c</var></h4>
+            <h4 class="text-white">Enter the value of \(c\)</h4>
             <div class="center-form">
                 <input type="number" id="c1" placeholder="c" name="c1" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <h3 class="text-white">Second Equation:</h3>
             <hr class="bg-danger" style="width: 50%;" />
-            <h4 class="text-white">Enter the value of <var>a</var></h4>
+            <h4 class="text-white">Enter the value of \(a\)</h4>
             <div class="center-form">
                 <input type="number" id="a2" placeholder="a" name="a2" class="form-control mb-0" step="0.1" />
             </div>
             <br />
-            <h4 class="text-white">Enter the value of <var>b</var></h4>
+            <h4 class="text-white">Enter the value of \(b\)</h4>
             <div class="center-form">
                 <input type="number" id="b2" placeholder="b" name="b2" class="form-control mb-0" step="0.1" />
             </div>
             <br>
-            <h4 class="text-white">Enter the value of <var>c</var></h4>
+            <h4 class="text-white">Enter the value of \(c\)</h4>
             <div class="center-form">
                 <input type="number" id="c2" placeholder="c" name="c2" class="form-control mb-0" step="0.1" />
             </div>
@@ -95,20 +97,20 @@
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr style="width: 60%;">
-        <h3>Case <var>x = y</var> (<var>ax + by = c</var>)</h3>
+        <h3>Case \(x = y\) (\(ax + by = c\))</h3>
         <hr style="width: 50%;">
         <form autocomplete="off">
-            <h4 class="text-white">Enter the value of <var>a</var></h4>
+            <h4 class="text-white">Enter the value of \(a\)</h4>
             <div class="center-form">
                 <input type="number" id="a3" placeholder="a" name="a1" class="form-control mb-0" step="0.1" />
             </div>
             <br />
-            <h4 class="text-white">Enter the value of <var>b</var></h4>
+            <h4 class="text-white">Enter the value of \(b\)</h4>
             <div class="center-form">
                 <input type="number" id="b3" placeholder="b" name="b1" class="form-control mb-0" step="0.1" />
             </div>
             <br>
-            <h4 class="text-white">Enter the value of <var>c</var></h4>
+            <h4 class="text-white">Enter the value of \(c\)</h4>
             <div class="center-form">
                 <input type="number" id="c3" placeholder="c" name="c1" class="form-control mb-0" step="0.1" />
             </div>
