prod: added phenotype support

--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -95,6 +95,10 @@
         <div style="height: 1em !important;">
             <p class="text-warning" id="output">100% for AA</p>
         </div>
+        <br>
+        <div style="height: 1em !important;">
+            <p class="text-warning" style="font-size: 20px;" id="phenotypeout">Phenotype: 100% for a</p>
+        </div>
         <div class="my-4">
             <a href="https://duckduckgo.com/?q=find+punnett+square" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
