fix: minor changes

--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -93,7 +93,7 @@
         </table>
         <p>Chances:</p>
         <div style="height: 1em !important;">
-            <p class="text-warning" id="output">100% for AA</p>
+            <p class="text-warning" id="output">Genotype: 100% for AA</p>
         </div>
         <br>
         <div style="height: 1em !important;">
