--- a/loan.html
+++ b/loan.html
@@ -60,7 +60,7 @@
                         <option value="&#8369;">&#8369; - Peso</option>
                         <option value="&#8356;">&#8356; - Lira</option>
                     </select>
-                    <input type="number" id="amount" placeholder="€amount" class="form-control" style="width: 65%"
+                    <input type="number" id="amount" placeholder="&#164;amount" class="form-control" style="width: 65%"
                         step="0.1" min="0" />
                 </div>
             </div>
