fix: minor changes

--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -97,7 +97,7 @@
         </div>
         <br>
         <div style="height: 1em !important;">
-            <p class="text-warning" style="font-size: 20px;" id="phenotypeout">Phenotype: 100% for a</p>
+            <p class="text-warning" style="font-size: 20px;" id="phenotypeout">Phenotype: 100% for A</p>
         </div>
         <div class="my-4">
             <a href="https://duckduckgo.com/?q=find+punnett+square" target="_blank" rel="noopener"
